--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,114 +11,114 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:textColor="#3F51B5"
+        android:background="#00BCD472"
         android:gravity="center"
         android:padding="16dp"
-        android:background="#00BCD472"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/app_name"
+        android:textColor="#3F51B5"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Empty wishlist message -->
     <TextView
         android:id="@+id/emptyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="@string/your_wishlist_is_empty"
         android:textSize="18sp"
         android:visibility="gone"
-        android:layout_gravity="center_horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-        <!-- Input for item name -->
-    <EditText
-        android:id="@+id/itemName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/item_name_hint"
-        android:textColor="#212121"
-        android:textStyle="bold"
-        android:inputType="text"
-        android:autofillHints="itemName"
-        android:padding="12dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/emptyTextView"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="false"/>
-
-        <!-- Input for item price -->
-    <EditText
-        android:id="@+id/itemPrice"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/item_price_hint"
-        android:textColor="#212121"
-        android:textStyle="bold"
-        android:inputType="numberDecimal"
-        android:background="#FFCDD2"
-        android:autofillHints="itemPrice"
-        android:layout_marginTop="8dp"
-        android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/itemName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="false"/>
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
-        <!-- Input for item URL -->
-    <EditText
-        android:id="@+id/itemURL"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/item_url_hint"
-        android:textColor="#212121"
-        android:textStyle="bold"
-        android:inputType="textUri"
-        android:autofillHints="url"
-        android:layout_marginTop="8dp"
-        android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/itemPrice"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="false"/>
+    <!-- Input for item name -->
 
-        <!-- Button to add items to wishlist -->
-    <Button
-        android:id="@+id/addButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_item"
-        android:backgroundTint="#3F51B5"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/itemURL"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+    <!-- Input for item price -->
+
+    <!-- Input for item URL -->
+
+    <!-- Button to add items to wishlist -->
 
     <!-- Wishlist RecyclerView (below heading) -->
+
+    <EditText
+        android:id="@+id/itemName"
+        android:layout_width="361dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:autofillHints="itemName"
+        android:clickable="false"
+        android:ellipsize="end"
+        android:hint="@string/item_name_hint"
+        android:inputType="text"
+        android:maxLines="1"
+        android:padding="12dp"
+        android:textColor="#212121"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/itemURL"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/itemPrice"
+        android:layout_width="156dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="40dp"
+        android:autofillHints="itemPrice"
+        android:background="#FFCDD2"
+        android:clickable="false"
+        android:hint="@string/item_price_hint"
+        android:inputType="numberDecimal"
+        android:padding="12dp"
+        android:textColor="#212121"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/addButton"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/itemURL"
+        android:layout_width="361dp"
+        android:layout_height="wrap_content"
+        android:autofillHints="url"
+        android:clickable="false"
+        android:hint="@string/item_url_hint"
+        android:inputType="textUri"
+        android:padding="12dp"
+        android:textColor="#212121"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/itemPrice"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/addButton"
+        android:layout_width="108dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="40dp"
+        android:backgroundTint="#3F51B5"
+        android:padding="12dp"
+        android:text="@string/add_item"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         android:background="@android:color/white"
         android:elevation="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/addButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/itemName"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emptyTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
