--- a/app/src/main/res/layout/wishlist_item.xml
+++ b/app/src/main/res/layout/wishlist_item.xml
@@ -23,18 +23,19 @@
         android:layout_height="wrap_content"
         android:text="@string/price"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/itemNameTextView"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/itemNameTextView" />
 
     <TextView
         android:id="@+id/itemUrlTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="@string/url"
-        android:textSize="16sp"
         android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/itemPriceTextView"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/itemPriceTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
